--- a/docker/Dockerfile.gpu
+++ b/docker/Dockerfile.gpu
@@ -11,22 +11,9 @@ RUN \
     mkdir $CODE_DIR && \
     cd $CODE_DIR && \
     pip install --upgrade pip && \
-    pip install codacy-coverage && \
-    pip install scipy && \
-    pip install joblib && \
-    pip install mpi4py && \
-    pip install cloudpickle && \
     pip install tensorflow-gpu==1.8.0 && \
-    pip install opencv-python && \
-    pip install numpy && \
-    pip install pandas && \
-    pip install pytest && \
-    pip install pytest-cov && \
-    pip install pytest-env && \
-    pip install pytest-xdist && \
-    pip install pytype && \
-    pip install matplotlib && \
-    pip install gym[atari,classic_control]>=0.10.9
+    pip install -e .[mpi,tests] && \
+    pip install codacy-coverage
 
 ENV PATH=$VENV/bin:$PATH
 
